<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:inputType="number"
        android:text="@string/result_default" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_result"
        android:text="@string/Button7_text" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:text="@string/Button8_text" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_toRightOf="@+id/button8"
        android:text="@string/Button9_text" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button7"
        android:text="@string/Button4_text" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button8"
        android:text="@string/Button5_text" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button9"
        android:text="@string/Button6_text" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button4"
        android:text="@string/Button1_text" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button4"
        android:text="@string/Button2_text" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/Button3_text" />

    <Button
        android:id="@+id/button0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:text="@string/Button0_text" />

    <Button
        android:id="@+id/button_div"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_result"
        android:layout_marginLeft="76dp"
        android:layout_toRightOf="@+id/button9"
        android:text="@string/Button_div" />

    <Button
        android:id="@+id/button_mul"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/button9"
        android:text="@string/Button_mul" />

    <Button
        android:id="@+id/button_add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/button_mul"
        android:text="@string/Button_add" />

    <Button
        android:id="@+id/button_equal"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button_div"
        android:text="@string/Button_equal" />

    <Button
        android:id="@+id/button_minus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_equal"
        android:layout_alignLeft="@+id/button_equal"
        android:text="@string/Button_minus" />

</RelativeLayout>